@@ -31,7 +31,7 @@ filename = README.pod
 location = root
 
 [Prereq]
-Moose = 2.0000
+Moose = 1.23
 
 [Prereq / TestRequires]
 Test::Simple = 0.94
