@@ -1,5 +1,7 @@
 package MooseX::BuildArgs;
-use Moose::Role;
+use Moose ();
+use Moose::Exporter;
+
 
 =head1 NAME
 
@@ -23,7 +25,7 @@ constructor are saved in the build_args attribute:
 
 =head1 DESCRIPTION
 
-Sometimes it is very useful to have access the the contructor arguments before builders,
+Sometimes it is very useful to have access to the contructor arguments before builders,
 defaults, and coercion take affect.  This module provides a build_args hashref attribute
 for all instances of the consuming class.  The build_args attribute contains all arguments
 that were passed to the constructor.
